# DVA315

./: .gitignore  README.md
Test/: Lab_1.c
This_Sort_of_works/: main.c  wrapper.c
labb1/: CMakeLists.txt  build.sh
labb1/HEADER_FILES/: wrapper.h
labb1/SOURCE_FILES/: Lab_1.c  main.c  wrapper.c
labb2/: build.sh
labb2/SOURCE_FILES/: Lab_2.c
labb3/: CMakeLists.txt
labb3/SOURCE_FILES/: Lab_3_server.c  wrapper.c
labb3/client/: CMakeLists.txt
labb3/client/SOURCE_FILES/: Lab_3_client.c  wrapper.c
labb3/server/SOURCE_FILES/: Lab_3_server.c
labb4/: tasks.txt
labb4/SOURCE_FILES/: Lab_4.c
labb5/: CMakeLists.txt  ref.txt
labb5/SOURCE_FILES/: Lab_5.c
